Fix mistakes in the grammar example

--- a/documents/examples_article.tex
+++ b/documents/examples_article.tex
@@ -531,7 +531,7 @@ enough for derivation trees
 \end{figure}
 
 
-\subsection{Multi-line math and grammars}
+\subsection{Math and grammars}
 In some cases, one may want to include a grammar for a language within a figure,
 such as the context-sensitive language in the figure below. This is merely done,
 by placing an \emph{equation} or \emph{align} within a figure.
@@ -550,9 +550,9 @@ by placing an \emph{equation} or \emph{align} within a figure.
     \\
     BD_i &\quad \rightarrow\quad bD_i
     \\
-    Bb &\quad \rightarrow\quad Bb
+    Bb &\quad \rightarrow\quad bb
     \\
-    Ab &\quad \rightarrow\quad aB
+    Ab &\quad \rightarrow\quad ab
     \\
     Aa &\quad \rightarrow\quad aa
   \end{align*}
