Fix '\oval, \circle, or \line size unavailable' error

--- a/preamble/preamble_base_p1.tex
+++ b/preamble/preamble_base_p1.tex
@@ -103,7 +103,7 @@
 
 % qtree
 \usepackage[noload]{qtree}
-
+\usepackage{pict2e}
 
 % ---------------------------------------------------------------------------- %
 % Code: lstlisting
